--- a/physical-performance-front/public/index.html
+++ b/physical-performance-front/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Graduate&family=Lato:wght@300;400;700&family=Oswald:wght@300;400;500;600;700&family=Passion+One:wght@700&family=Teko:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Bebas+Neue&family=Dosis:wght@400;500;700&family=Graduate&family=Kdam+Thmor+Pro&family=Lato:wght@300;400;700&family=Nova+Square&family=Oswald:wght@300;400;500;600;700&family=Passion+One:wght@700&family=Teko:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
